# ai-model-recommendation-engine

./: README.md
backend/: README.md  db.sqlite3  process_questions.py  pyproject.toml
backend/app/: main.py
backend/backend/: settings.py
backend/config/: settings.py  urls.py
backend/core/: models.py
backend/core/management/commands/: import_models.py
backend/core/migrations/: 0001_initial.py
backend/engine/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/engine/management/commands/: check_deprecated_models.py  cleanup_deprecated_recommendations.py  import_models.py  import_traces.py  mark_deprecated_models.py  mark_vendors_deprecated.py  run_analysis.py  setup_app_models.py  test_recommendations.py  update_application_categories.py  update_model_categories.py
backend/engine/migrations/: 0001_initial.py  0002_application_modelnamealias_usageanalysis_and_more.py  0003_add_assigned_model_to_application.py  0004_add_categories_to_aimodel.py  0005_alter_aimodel_categories.py  0006_add_category_to_application.py  0007_change_application_category_to_categories.py  0008_remove_application_idx_app_category_active_and_more.py  0009_remove_application_idx_app_category_active_and_more.py  0010_add_benchmark_scores.py
backend/engine/services/: __init__.py  model_resolver.py  model_tester.py  process_questions.py  recommendation_engine.py  usage_analyzer.py
frontend/: TROUBLESHOOTING.md  build-error.txt  package-lock.json  package.json  tailwind.config.js  tsc-errors.txt
frontend/src/: App.test.tsx  App.tsx  (+2 more)
scripts/: setup_db.sh
(+12 files in other folders)
