[project]
name = "model-recommendation-engine-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for model recommendation engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.128.0",
    "pydantic==2.12.5",
    "uvicorn[standard]==0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

